<resources>
    <string name="app_name" translatable="false">Maksab</string>
    <string name="regular">CALIBRI REGULAR</string>
    <string name="light">CALIBRIL LIGHT</string>
    <string name="bold">CALIBRIB BOLD</string>
    <string name="ext">.TTF</string>
    <string name="select_country_language">Select Your Country &amp; Language</string>
    <string name="select_country_city">Select Your Country &amp; City</string>
    <string name="select_language">Select Language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="turkce" translatable="false">Türkçe</string>
    <string name="select_country">Select Country</string>
    <string name="select_business">Select Your Business Type</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="login_signup">Log In/Sign Up</string>
    <string name="home">Home</string>
    <string name="purchases">My Purchase</string>
    <string name="favorites">My Favorites</string>
    <string name="country_languages">Country &amp; Languages</string>
    <string name="membership">MAKSAB Membership</string>
    <string name="invite">Invite Friends</string>
    <string name="become_partner">Become A Partner</string>
    <string name="careers">Careers</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="terms_condition_msg">Please accept term of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="cat_brand">Big brands you love</string>
    <string name="cat_collections">Collections For You</string>
    <string name="cat_trending">Trending Deals</string>
    <string name="cat_hot_deal">Hot Deal</string>
    <string name="cat_new_deal">New Deal</string>
    <string name="brand_capital">BRANDS</string>
    <string name="select_your_package">Select Your Package</string>
    <string name="temrs_of_service">
        <![CDATA[I have read and accepted MAKSAB\'s <a href="terms_of_service_url">Terms Of Use</a> and <a href="privacy_policy_url">Privacy Policy</a>.]]>

    </string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="store">Store</string>
    <string name="user">User</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="done">Done</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didnt_get_otp">Didn\'t get the otp?</string>
    <string name="update">Update</string>
    <string name="notification">Notification</string>
    <string name="change_passsword">Change Password</string>
    <string name="profile_photos">Profile Photos</string>
    <string name="choose_image_source">Choose Image Source.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_image_video">Choose Image and Video Source.</string>
    <string name="select_picture">Select Picture</string>
    <string name="cropping_failed">Cropping failed</string>
    <string name="verify">&#160;Verify&#160;&#160;</string>
    <string name="verified">Verified</string>
    <string name="otp">OTP Verification</string>
    <string name="offer_list">Offer List</string>
    <string name="search_filter">Search &amp; Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="category">Category</string>
    <string name="price_range">Price Range</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="search_results">Search Results</string>
    <string name="hint_search_msg">Search...</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="added_wishlist">Added in wishlist</string>
    <string name="share_this_deal">Share this deal</string>
    <string name="reaming">Reaming</string>
    <string name="server_not_response">Server Not Responding</string>
    <string name="guest_alert">This feature only for user!</string>
    <string name="guest_login_alert">Please login to use this feature!</string>
    <string name="subscribe_alert">Please subscribe to be able to redeem offer!</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_photo_or_video">Take Photo or Video</string>
    <string name="required_email_or_phone">Email ID or Phone Number.</string>
    <string name="wrong">Something went wrong, Please try again.</string>
    <string name="password_matching">Password Not matching.</string>
    <string name="all_required">All fields required.</string>
    <string name="invalid_email">Enter valid email address.</string>
    <string name="email_pass">Enter your email id and password.</string>
    <string name="alert">Alert</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="remove_favourite_message">Do you want to remove this item from list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_dialog">Choose Your Sign Up Type</string>
    <string name="home_login_dialog">Choose Your Login Type</string>
    <string name="cart_confirm">You Want Purchase this Product</string>
    <string name="thanking_you">Thanking You</string>
    <string name="thanking_you_msg">Your Order has been send your store account.\n Please follow your order setion.</string>
    <string name="choose_country_language">Choose City and Language</string>
    <string name="error_no_internet">Please check your internet connection or try again later</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_signin">Sign In</string>
    <string name="label_register_now">Register Now</string>
    <string name="label_later">Later</string>
    <string name="label_submit">SUBMIT</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_forgot_your_password">Forgot Your Password?</string>
    <string name="label_no_account">Don\'t have an account yet?</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_mobile">Email or Mobile</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_city">City/Area</string>
    <string name="hint_number">Phone Number</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_nationality">Nationality</string>
    <string name="hint_additional_information">Additional Information</string>
    <string name="label_login_offer_msg">Complete your profile to access exciting offer in your city</string>
    <string name="label_login_msg">Already have an account?</string>
    <string name="label_offer_send">Send me offers and updates via email</string>
    <string name="label_intro_msg">Speed up your shopping experience by registering with us</string>
    <string name="hint_dobn">Date of birth</string>
    <string name="hint_job">Job title</string>
    <string name="hint_info">Additional Information</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="pay_now">Pay Now</string>
    <string name="billing_address">Billing Address</string>
    <string name="country">Country</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="error_coupon_code">Enter Coupon Code</string>
    <string name="grow_your_business">Grow your business with MAKSAB</string>
    <string name="grow_your_business_d">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
    </string>
    <string name="with_maksab_h1">Attract new customers</string>
    <string name="with_maksab_d1">Tap into our base of over 4 million subscribers. Put your business on a platform that
        gets millions of visits per month.
    </string>
    <string name="with_maksab_h2">Get valuable marketing exposure</string>
    <string name="with_maksab_d2">Ride on Fave’t regular promotions, email marketing, social media, brand partnerships and
        more
    </string>
    <string name="with_maksab_h3">Get free business tools to help you understand your customers better</string>
    <string name="with_maksab_d3">Tap into our base of over 4 million subscribers. Put your business on a platform that
        gets millions of visits per month.Benefit from Fave’s proprietary business tools for partners. Study purchase
        patterns, review your earnings and optimise your revenue with an easy-to-use dashboard
    </string>
    <string name="there_is_more">Wait, there is more...</string>
    <string name="there_is_h1">Dedicated partner support</string>
    <string name="there_is_d1">Work with a team of Partner Managers that are always available to help you with processes
        and optimisation
    </string>
    <string name="there_is_d2">Get free, high-quality photos taken by a professional photographer hired by us. Want to use
        these images in your own promotional materials? Simply submit a request to us!
    </string>
    <string name="there_is_h3">Transparent commission</string>
    <string name="there_is_d3">No upfront fee or setup costs required, listing is absolutely free! We only take a fair,
        flat-rate commission only when a purchase is made
    </string>
    <string name="started_maksab">Become a partner. Get started on MAKSAB now!</string>
    <string name="get_in_touch_now">Get in touch now</string>
    <string name="comments">Comments</string>
    <string name="who_we_are">Who we are?</string>
    <string name="british1">BRITISH</string>
    <string name="arabic1">ARABIC</string>
    <string name="turkey1">TURKEY</string>
    <string name="with_maksab">With MAKSAB, you can</string>
    <string name="error_f_name">Enter Name</string>
    <string name="error_l_name">Enter Last Name</string>
    <string name="error_pass">Enter Password</string>
    <string name="error_phone">Enter Phone Number</string>
    <string name="error_email">Enter Email Id</string>
    <string name="error_email_or_mobile">Enter Email or Mobile</string>
    <string name="error_subject">Enter Subject</string>
    <string name="error_massage">Enter Message</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="congratulation">Congratulation!</string>
    <string name="offer_redeemed">Your offer has been redeemed</string>
    <string name="my_past_purchase">My Past Purchase</string>
    <string name="enter_email">Enter email address</string>
    <string name="add">Add</string>
    <string name="family_member">Multiple Device Setting</string>
    <string name="you_have_saved">You have saved</string>
    <string name="redeemption_reference_number">Redeemption Reference Number</string>
</resources>